fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -17,9 +17,8 @@ h1 {
 body {
 	/*top, right and left, bottom*/
 	margin: 100px 150px 1000px;	
-	
-	/*idk why top and bottom arent being affected */
 
+	/*idk why top and bottom arent being affected */
 }
 
 h2{
@@ -37,6 +36,10 @@ h3{
 	color:#522761;
 	padding-left: 10px;
 }
+
+/*RIGHT SIDE OF PAGE*/
+
+
 .rightcol{
 	padding-top: 40px;
 	margin: auto;
@@ -44,21 +47,6 @@ h3{
 	width: 30%;
 }
 
-.leftcol{
-	float: left;
-	width: 67%;
-	padding-top: 40px;
-}
-
-.sections{
-	background-color: rgba(231, 223, 247, 0.5);
-	padding: 30px;
-	border-radius: 30px;
-	text-align: left;
-	font-family: courier;
-	list-style-position: outside;
-	margin-bottom: 30px;
-}
 
 #links {
 	color: #522761;
@@ -70,10 +58,36 @@ h3{
 	color: #a64fc4;
 }
 
+
+/*LEFT SIDE OF PAGE*/
+
+
+
+.leftcol{
+	float: left;
+	width: 67%;
+	padding-top: 40px;
+}
+
+.sections{
+	background-color: rgba(231, 223, 247, 0.5);
+	padding: 40px;
+	border-radius: 30px;
+	text-align: left;
+	font-family: courier;
+	/*list-style-position: outside;*/
+	margin-bottom: 30px;
+	overflow: scroll;
+	
+}
+
 .entry_details{
 	list-style-type: circle;
 	font-size: 1.1vw;
 	color : mediumseagreen;
 }
+
+
+
 
 
